--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 	</nav>
 	<div class="container">
 		<div class="item item-title"><p>Pilih outlate terdekat dengan lokasi anda..</p></div>
-		<div class="item">Jakarta</div>
-		<div class="item">Makassar</div>
-		<div class="item">Surabaya</div>
-		<div class="item">Bandung</div>
-		<div class="item">Medan</div>
-		<div class="item">Padang</div>
-		<div class="item" id="i-help"><a href="#">Bantuan</a></div>
+		<div class="item"><p>Jakarta</p></div>
+		<div class="item"><p>Makassar</p></div>
+		<div class="item"><p>Surabaya</p></div>
+		<div class="item"><p>Bandung</p></div>
+		<div class="item"><p>Medan</p></div>
+		<div class="item"><p>Padang</p></div>
+		<div class="item i-help"><p><a href="#">Bantuan</a></p></div>
 	</div>
 	<footer>
 		<p id="info">
