mengubah style button bantuan

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 	</footer>
 <!-- 	Pemesanan online untuk pembayaran menggunakan transfer dan pengiriman menggunakan Ojek Online. Harga tercantum belum termasuk biaya pengiriman.
  -->
+<script src="script.js"></script>
 </body>
 </html>
